# meiling-rust

./: .gitignore  CONFIGURE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  setup-config.sh
.github/workflows/: clippy.yml
docs/: meiling-on-windows.md
migrations/2020-09-25-035711_basic_structure/: down.sql  up.sql
migrations/2020-10-03-145536_meiling_structure/: down.sql  up.sql
res/readme/: banner.psd  meiling-ferris.psd
src/: config.rs  main.rs
src/database/: connection.rs  database_enums.rs  enums.rs  mod.rs  model.rs  schema.rs
src/gql/: context.rs
src/gql/schema/: enums.rs  mod.rs  objects.rs
src/gql/schema/mutation/: mod.rs
src/gql/schema/objects/: authentication_info.rs  email.rs  full_user.rs  mod.rs  user.rs
src/gql/schema/query/: mod.rs
src/meiling/: enums.rs  mod.rs  oauth2.rs  token.rs  user.rs
src/meiling/objects/: authentication_info.rs  email.rs  mod.rs  oauth2.rs  user.rs
src/oauth2/: error.rs  mod.rs
