[package]
name = "meiling"
version = "0.1.0"
authors = ["Joosung Park <admin@slowmotion.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = "0.4.15"
diesel = { version = "1.4.5", features = ["chrono", "mysql", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["mysql"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
juniper = "0.14.2"
rand = "0.7.3"
serde = "1.0.116"
serde_json = "1.0.57"
thiserror = "1.0.20"
